--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "pos-ui",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "electron/main.js",
+  "homepage": "./",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run vite:dev\" \"npm run electron:dev\"",
+    "vite:dev": "vite",
+    "electron:dev": "wait-on http://localhost:5174 && cross-env NODE_ENV=development electron .",
     "build": "tsc -b && vite build",
+    "electron:build": "npm run build && electron-builder",
+    "electron:dist": "npm run build && electron-builder --publish=never",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -37,6 +42,7 @@
     "react-router-dom": "^7.9.2",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
+    "systeminformation": "^5.27.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
@@ -47,6 +53,10 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.0.0",
+    "electron": "^38.1.2",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -55,6 +65,62 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "wait-on": "^9.0.1"
+  },
+  "build": {
+    "appId": "com.kasirpro.app",
+    "productName": "KasirPro",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "node_modules/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "public",
+        "to": "public",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "public/vite.svg"
+    },
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "icon": "public/vite.svg"
+    },
+    "linux": {
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "public/vite.svg"
+    }
   }
 }
